# django_with_machina

./: .envrc.template  .gitignore  Makefile  README.md  community.db  manage.py  pyproject.toml  setup.cfg  wsgi.py
community/: urls.py
community/fixtures/: auth.json  forum.json  forum_attachments.json  forum_category.json  forum_conversation.json  forum_member.json  forum_permission.json  forum_polls.json  forum_tracking.json
community/locale/fr/LC_MESSAGES/: django.po
community/settings/: base.py
main/apps/auth/: forms.py  urls.py  views.py
main/apps/forum/: admin.py  apps.py  enums.py  models.py  urls.py  views.py
main/apps/forum_category/: admin.py  apps.py  models.py
main/apps/forum_category/migrations/: 0001_initial.py
main/apps/forum_conversation/: apps.py  managers.py  models.py  urls.py  views.py
main/apps/forum_member/: admin.py  apps.py  models.py  urls.py  views.py
main/common/: mixins.py
main/static/css/: theme.css
main/templates/: base.html  board_base.html
main/templates/directories/: users.html
main/templates/forum/: forum_list.html  group_profiles_list.html  homepage.html  index.html
main/templates/forum_conversation/: feed.html
main/templates/forum_member/: profile_groups_list.html  profiles.html
main/templates/registration/: base_account.html  login.html  parameters.html  password.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  unregister.html
project/settings/: base.py
scripts/: export_fixtures.sh
